--- a/css/sign.css
+++ b/css/sign.css
@@ -2,30 +2,32 @@
 
 .sign-banner {
   display: flex;
-  gap: 1.15vw;
-  margin: 3.12vw auto;
-  width: 20.6vw;
-  padding: 0.676vw 0 0.789vw;
+  gap: 22.24px;
+  margin: 60px auto 0;
+  width: 100%;
+  max-width: 396px;
+  padding: 12.98px 0 15.14px;
+  justify-content: center;
 }
 
 .sign-banner-img {
-  width: 5.4vw;
-  height: 5.4vw;
+  width: 103.53px;
+  height: 103.88px;
 }
 
 .sign-title {
-  font-family: "ROKAF-Sans";
   color: var(--primary-color);
-  font-weight: 36.46vw;
-  font-size: 3.45vw;
-  line-height: 4.66vw;
-  padding: 0.572vw 0 0.15vw;
+  font-weight: 700px;
+  font-size: 66.34px;
+  line-height: 89.56px;
+  padding: 10.99px 4.23px 2.88px 0;
 }
 
 /* 메인 */
 
 .sign-form {
-  width: 640px;
+  width: 100%;
+  max-width: 640px;
   margin: 40px auto;
   display: flex;
   flex-direction: column;
@@ -49,7 +51,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  width: 640px;
+  width: 100%;
   height: 56px;
   padding: 16px;
   padding-left: 24px;
@@ -72,9 +74,10 @@
   cursor: pointer;
 }
 
-.sign-form button {
+.sign-form > button {
   background-color: var(--sign-button-color);
-  width: 640px;
+  width: 100%;
+  margin: 0 auto;
   height: 56px;
   border-radius: 40px;
   border: none;
@@ -99,31 +102,34 @@
   background-color: var(--primary-color);
 }
 
-.sign-social {
+.social-login {
   background-color: #e6f2ff;
-  width: 640px;
+  width: 100%;
   height: 74px;
+  margin: 0 auto;
   border-radius: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 393px;
+  justify-content: space-between;
 }
 
-.sign-social text {
+.social-login .description {
   color: var(--sign-color);
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
-  flex-grow: 1;
+  padding-left: 24px;
+  white-space: nowrap;
 }
 
-.sign-social .icon {
+.social-login .button-box {
   display: flex;
   gap: 16px;
+  padding-right: 24px;
 }
 
-.sign-social .icon > a {
+.social-login .button-box > a {
   width: 42px;
   height: 42px;
 }
@@ -142,4 +148,66 @@
 .sign-footer a {
   color: #3182f6;
   text-decoration: underline;
+}
+
+/* Tablet*/
+
+@media (max-width: 1200px) {
+  /* 배너 */
+
+  .sign-banner {
+    margin: 48px auto 0;
+  }
+
+  /* 메인 */
+
+  .sign-form label {
+    margin-bottom: 16px;
+  }
+
+  .sign-footer {
+    margin-top: 0;
+  }
+}
+
+/* mobile*/
+
+@media (max-width: 768px) {
+  /* 배너 */
+
+  .sign-banner {
+    gap: 11.12px;
+    margin: 24px auto 0;
+    padding: 6.49px 0 7.57px;
+  }
+
+  .sign-banner-img {
+    width: 51.76px;
+    height: 51.94px;
+  }
+
+  .sign-title {
+    font-size: 33.17px;
+    line-height: 44.78px;
+    padding: 5.5px 2.12px 1.41px 0;
+  }
+
+  /* 메인 */
+
+  .sign-form {
+    gap: 16px;
+    margin: 24px auto;
+  }
+
+  .sign-form label {
+    margin-bottom: 8px;
+  }
+
+  .social-login {
+    margin: 8px auto 0;
+  }
+
+  .sign-footer {
+    margin-top: 8px;
+  }
 }
