--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,7 @@
   --input-color: #f3f4f6;
   --sign-button-color: #9ca3af;
 }
-
+/* zzz */
 @font-face {
   font-family: "Pretendard-Regular";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
