--- a/css/sign.css
+++ b/css/sign.css
@@ -95,7 +95,7 @@
   height: 56px;
   border-radius: 40px;
   border: none;
-  padding: 16px, 124px;
+  padding: 16px;
   color: var(--button-color);
   font-size: 20px;
   font-weight: 600;
