--- a/src/css/common.css
+++ b/src/css/common.css
@@ -46,3 +46,25 @@ body {
   margin-top: 12px;
   margin-bottom: 24px;
 }
+
+input:focus {
+  outline: none;
+}
+
+textarea:focus {
+  outline: none;
+}
+input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: "Pretendard-Regular";
+  color: #9ca3af;
+}
+textarea::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: "Pretendard-Regular";
+  color: #9ca3af;
+}
