--- a/src/css/common/index.css
+++ b/src/css/common/index.css
@@ -1,6 +1,7 @@
 @layer reset, base, tokens, recipes, utilities;
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
 
 body {
-  font-family: "Pretender", sans-serif;
+  font-family: "Pretendard", sans-serif;
   color: #374151;
 }
